# dv_schema_models

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  README.md  main.py  pyproject.toml  release-please-config.json  zensical.toml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  release.yml  sync-citation.yml  test.yml
docs/: index.md  reference.md
docs/reference/: dataset_instance.md  dataverse_schema.md  file_instance.md  role_assignments.md  schema_driven_records.md  schema_spreadsheet.md
docs/schema_spreadsheet/: README.md
src/dv_schema_models/: __init__.py  dataset_instance.py  dataverse_schema.py  file_instance.py  role_assignments.py  schema_driven_records.py  schema_spreadsheet.py
tests/: __init__.py  ds_export_metadata.json  ds_metadata.json  ds_metadata_deaccession.json  ds_metadata_error.json  ds_role_assignments.json  ds_role_assignments_error.json  dv_schema.json  test_dataset_instance.py  test_import.py
