[project]
name = "dv-schema-models"
version = "0.1.0"
description = "Turns Harvard Dataverse Project metadatablocks schema into Pydantic models."
readme = "README.md"
authors = [
    { name = "Ken Lui", email = "kenlh.lui@utoronto.ca"}
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
]
license = "MIT"

[tool.cff-from-621.static]
message = "If you use this software, please cite it."
