[project]
name = "dv-schema-models"
version = "0.7.0"
description = "Turns Harvard Dataverse Project metadatablocks schema and dataset JSON into Pydantic models."
readme = "README.md"
authors = [
    { name = "Ken Lui", email = "kenlh.lui@utoronto.ca"}
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/kenlhlui/dv_schema_models/"
Documentation = "https://github.com/kenlhlui/dv_schema_models/blob/main/README.md"
Repository = "https://github.com/kenlhlui/dv_schema_models.git"
Issues = "https://github.com/kenlhlui/dv_schema_models/issues"
Changelog = "https://github.com/kenlhlui/dv_schema_models/blob/main/CHANGELOG.md"

[project.optional-dependencies]
spreadsheet = [
    "xlsxwriter>=3.2.9",
]


[tool.cff-from-621.static]
message = "If you use this software, please cite it."


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]